fixed manifest name, and nav text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,82 @@
 .nav-wrapper {
-	background-color: #333333;
+  background-color: #333333;
 }
-.site-title {
-	font-family: "Passion One";
-	font-size: 50px;
-	margin-left: 10px;
+nav .nav-text-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 10px;
+}
+nav .site-title {
+  font-family: "Passion One";
+  font-size: 50px;
+}
+nav .site-subtitle {
+  font-size: 1.3em;
+  margin-left: 5px;
+  font-family: "Passion One";
+}
+
+@media only screen and (max-width: 600px) {
+  nav {
+    height: 80px;
+  }
+  nav .nav-text-wrapper {
+    flex-direction: column;
+  }
+  nav .site-title {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  nav .site-subtitle {
+    margin-left: 0;
+    line-height: 25px;
+  }
 }
 .page-footer,
-.btn, 
+.btn,
 .btn-large,
-.btn:hover, 
-.btn-large:hover, 
+.btn:hover,
+.btn-large:hover,
 .btn-small:hover,
-.btn:focus, 
-.btn-large:focus, 
-.btn-small:focus
-{
-	background-color: #444444;
+.btn:focus,
+.btn-large:focus,
+.btn-small:focus {
+  background-color: #444444;
 }
 .page-footer .footer-copyright {
-	background-color: #333333;
+  background-color: #333333;
 }
 #footer-img {
-	max-height: 200px;
+  max-height: 200px;
 }
-.page-footer p{
-	font-size: 1.2em;
+.page-footer p {
+  font-size: 1.2em;
 }
 .card .card-title {
-	font-family: "Passion One";
-	font-size: 40px;
+  font-family: "Passion One";
+  font-size: 40px;
 }
 blockquote {
-    border-color: #ccc;
+  border-color: #ccc;
 }
 .btn:hover {
-	background-color: #333333;
+  background-color: #333333;
 }
 a.btn:visited {
-	background-color: #444444;	
+  background-color: #444444;
 }
 .story-description {
-	margin: 20px 0;
+  margin: 20px 0;
 }
 .chips-wrapper {
-	margin-top: 20px;
+  margin-top: 20px;
 }
-.links-wrapper a{
-	margin: 0 5px;
+.links-wrapper a {
+  margin: 0 5px;
 }
 .card .card-content p {
-	margin: inherit;
+  margin: inherit;
 }
 .card .card-action {
-	padding-bottom: 0;
+  padding-bottom: 0;
 }
